changes in the task

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
             "name": "C Launch",
             "type": "cppdbg",
             "request": "launch",
-        //    "preLaunchTask": "make",
+           "preLaunchTask": "make",
             "program": "${workspaceRoot}/build/run.out",
             "args": [],
             "stopAtEntry": false,
